# asammdf

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README.md  README.rst  app.bat  appveyor.yml  asammdf.spec  asammdf_noconsole.spec  bdist_wheel.bat  check_file.py  demo.dspf  local_build.bat  pip_requirements_readthedocs.txt  pip_requirements_tests.txt  pre_commit.bat  pylint.cfg  pyproject.toml  requirements.txt  requirements_exe_build.txt  res.txt  run_black_and_isort.bat  run_black_and_ruff.bat  run_ruff.bat  setup.cfg  setup.py  tox.ini  types-requirements.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  build_linux.yml  build_windows.yml  coveralls.yml  main.yml  pre-commit.yml  pythonpublish.yml  wheels.yml
asammdf/: __init__.py  conversion_utils.py  mdf.py  mdf2.py  mdf3.py  mdf4.py  mdf_v2.py  mdf_v2_v3.py  mdf_v3.py  mdf_v4.py  plot.py  recorder.py  signal.py  signalconstants.py  types.py  typing.py  utils.py  v2_v3_blocks.py  v2_v3_constants.py  v2blocks.py  v2constants.py  v3blocks.py  v3constants.py  v4_blocks.py  v4_constants.py  v4blocks.py  v4constants.py  version.py
asammdf/blocks/: FinalizationShim.py  bus_logging_utils.py  conversion_utils.py  cutils.c  encryption.py  finalization_shim.py  mdf_common.py  mdf_v2.py  mdf_v3.py  mdf_v4.py  options.py  pen-test-machine.txt  source_utils.py  utils.py  v2_v3_blocks.py  v2_v3_constants.py  v4_blocks.py  v4_constants.py
asammdf/gui/: __init__.py  asammdfgui.py  cx.py  plot.py  s.txt  ssss.txt  utils.py
asammdf/gui/dialogs/: advanced_search.py  bus_database_manager.py  channel_group_info.py  channel_info.py  conversion_editor.py  define_channel.py  error_dialog.py  functions_manager.py  gps_dialog.py  multi_search.py  range_editor.py  simple_search.py  tabular.py  window_selection_dialog.py
asammdf/gui/ui/: attachment.py  attachment.ui  bar.py  bar.ui  batch_widget.py  batch_widget.ui  bus_database_manager.py  bus_database_manager.ui  channel_bar_display_widget.py  channel_display_widget.py  channel_display_widget.ui  channel_group_display_widget.py  channel_group_display_widget.ui  channel_group_info_widget.py  channel_group_info_widget.ui  channel_info_widget.py  channel_stats.py  channel_stats.ui  (+53 more)
asammdf/recorder/: __init__.py  device.py  plugin.py  recorder.py
asammdfgui/: channel_display_widget.py  channel_display_widget.ui  channel_info_widget.py  channel_info_widget.ui  channel_stats.py  channel_stats.ui  cx.py  file_widget.py  file_widget.ui  generate.bat  gui.py  main_window.py  main_window.ui  range_editor_dialog.py  range_editor_dialog.ui  resource.qrc  resource_qt5.py  resource_rc.py  search_dialog.py  search_dialog.ui  search_widget.py
benchmarks/: asam 2.0.0 vs reader 0.2.5 Pyhton2.7.13x32 SSD i7-6820.txt  asam 2.0.0 vs reader 0.2.5 Pyhton3.6.1x32 SSD i7-6820.txt  asam 2.0.0 vs reader 0.2.5 Pyhton3.6.1x64 SSD i7-6820.txt  bench.py  gen_images.py  how to.txt  requirements.txt  x64_asammdf_5.12.0_mdfreader_3.3.rst
benchmarks/results/: x64_asammdf_2.1.0_mdfreader_0.2.5.txt  x64_asammdf_2.2.0_mdfreader_0.2.5.txt  x64_asammdf_2.3.0_mdfreader_0.2.5.txt  x64_asammdf_2.3.2_mdfreader_0.2.5.txt  x64_asammdf_2.4.3_mdfreader_0.2.5.txt  x64_asammdf_2.5.0_mdfreader_0.2.5.txt  x64_asammdf_2.5.2_mdfreader_0.2.5.txt  x64_asammdf_2.5.3_mdfreader_0.2.5.txt  x64_asammdf_2.5.4_mdfreader_0.2.6.txt  x64_asammdf_2.6.0_mdfreader_0.2.6.txt  x64_asammdf_2.6.2_mdfreader_0.2.6.txt  x64_asammdf_2.6.3_mdfreader_0.2.6.txt  x64_asammdf_2.6.4_mdfreader_0.2.6.txt  x64_asammdf_2.6.5_mdfreader_0.2.6.txt  x64_asammdf_2.7.0_mdfreader_0.2.7.txt  x64_asammdf_2.8.0_mdfreader_2.7.2.txt  x64_asammdf_2.8.1_mdfreader_2.7.3.txt  x64_asammdf_2.8.1_mdfreader_2.7.4.txt  x64_asammdf_3.0.0_mdfreader_2.7.5.txt  x64_asammdf_4.0.0.dev_mdfreader_2.7.7.txt  x64_asammdf_4.0.0.dev_mdfreader_2.7.8.txt  x64_asammdf_4.2.1_mdfreader_3.0.rst  x64_asammdf_4.3.0_mdfreader_3.0.rst  x64_asammdf_4.7.0_mdfreader_3.0.rst  x64_asammdf_5.0.0dev_mdfreader_3.0.rst  x64_asammdf_5.16.1_mdfreader_3.3.rst  x64_asammdf_5.20.0_mdfreader_4.0.rst  x64_asammdf_5.22.0_mdfreader_4.1.rst  x64_asammdf_7.0.1_mdfreader_4.1.rst  x64_asammdf_8.8.0_mdfreader_4.2.rst  x86_asammdf_2.1.0_mdfreader_0.2.5.txt  x86_asammdf_2.2.0_mdfreader_0.2.5.txt  x86_asammdf_2.3.0_mdfreader_0.2.5.txt  x86_asammdf_2.3.2_mdfreader_0.2.5.txt  x86_asammdf_2.4.3_mdfreader_0.2.5.txt  x86_asammdf_2.5.0_mdfreader_0.2.5.txt  x86_asammdf_2.5.2_mdfreader_0.2.5.txt  x86_asammdf_2.5.3_mdfreader_0.2.5.txt  x86_asammdf_2.5.4_mdfreader_0.2.6.txt  x86_asammdf_2.6.0_mdfreader_0.2.6.txt  (+9 more)
ci/: __init__.py  support.py
doc/: api.rst  benchmarks.rst  buslogging.rst  conf.py  examples.rst  functions_manager.rst  gui.rst  index.rst  intro.rst  requirements.txt  tips.rst  v2v3blocks.rst  v4blocks.rst
documentation/: Makefile  api.rst  benchmarks.rst  buslogging.rst  conf.py  examples.rst  gui.rst  index.rst  intro.rst  make.bat  mdf.rst  mdf2.rst  mdf23.rst  mdf3.rst  mdf4.rst  packagelevel.rst  signal.rst  tips.rst  v2blocks.rst  v2v3blocks.rst  v3blocks.rst  v4blocks.rst
examples/: Working with MDF Class.ipynb  Working with Signal Class.ipynb  mf4_demo.py  working with MDF class.py  working with Signal class.py
src/asammdf/: __init__.py  mdf.py  signal.py  tool.py  types.py  version.py  virtual.py
test/: almost-J1939.dbc  requirements.txt  run_all.py  test_CAN_bus_logging.py  test_CAN_bus_loogging.py  test_cantp.py  test_endianess.py  test_mdf.py  test_mdf2.py  test_mdf23.py  test_mdf3.py  test_mdf4.py  test_signal.py  utils.py  vectors.py  vectors_signal.py
test/data/: ASAP2_Demo_V161_2.00.mdf  ASAP2_Demo_V161_2.14.mf4  ASAP2_Demo_V161_3.00.mdf  ASAP2_Demo_V161_3.10.mdf  ASAP2_Demo_V161_3.20.mdf  ASAP2_Demo_V161_3.30.mf4  ASAP2_Demo_V161_4.00.mf4  ASAP2_Demo_V161_4.10.mf4  test_meas_2.00.mdf  test_meas_3.00.mdf  test_meas_3.10.mdf  test_meas_3.20.mdf  test_meas_4.00.mf4  test_meas_4.10.mf4
test/test_v4_blocks/: test_atblock.py  test_txblock.py
(+261 files in other folders)
