[build-system]
requires = ["numpy", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py38']
extend-exclude = '''
^/src/asammdf/gui/ui
'''

[tool.coverage.run]
source = ["asammdf"]
omit = ["*/asammdf/gui/ui/*"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
test-requires = "pytest"
test-command = "pytest {project}/test"
build-frontend = "build"
archs = ["auto64"]  # only build for 64bit architectures
skip = "pp* *_ppc64le  *-musllinux* *_s390x"  # skip pypy and irrelevant architectures

[tool.ruff]
target-version = "py38"
exclude = ["./src/asammdf/gui/ui"]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "F",  # pyflakes
    "UP",  # pyupgrade
    "I",  # isort
    "PIE",  # flake8-pie
    "PL",  # pylint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "B007",  # unused-loop-control-variable
    "F841",  # unused-variable
    "PLC0414",  # useless-import-alias
    "PLR09",  # too-many-this, too-many-that
    "PLR2004",  # magic-value-comparison
    "PLR5501",  # collapsible-else-if
    "PLW0603",  # global-statement
    "PLW2901",  # redefined-loop-name
    "RUF012",  # mutable-class-default
    "RUF015",  # unnecessary-iterable-allocation-for-first-element
]

[tool.ruff.lint.isort]
known-first-party = ["asammdf"]
order-by-type = false
force-sort-within-sections = true